<resources>
    <string name="app_name">Event Master</string>

    <!-- Application UI -->
    <string name="search_button_text">Find Events</string>
    <string name="sample_search_query">Denver, CO</string>
    <string name="sample_search_keyword">Eminem</string>
    <string name="search_query_hint">Location (optional)</string>
    <string name="search_keyword_hint">Keyword</string>
    <string name="title_activity_event_list">Search</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_content">image with data</string>
    <string name="content_description_decoration">decoration</string>
    <string name="sample_event_title">P!NK: Beautiful Trauma World Tour</string>
    <string name="sample_event_date">AUG 29 7:30 pm</string>
    <string name="sample_event_location">Denver, CO</string>

    <string name="location_text">%s, %s</string>
    <string name="weather_forecast_title">Weather Forecast</string>
    <string name="sample_weather_max_temp">82F</string>
    <string name="sample_weather_min_temp">77F</string>
    <string name="temperature_format">%1.0fF</string>
    <string name="weather_icon">weather icon</string>
    <string name="no_forecast_information_available">No forecast information available</string>
</resources>
